examples/tasker_primitive_obsession/src/domain/errors/invalid_progress_error.py
from building_blocks.domain.domain_error import DomainError


class InvalidProgressError(DomainError):
    """Exception raised for errors related to invalid  progress values."""

    def __init__(self, message: str = "Invalid progress value."):
        super().__init__(message)
